修改切片策略，可视化切片结果